tests/typing/bad/testfile-clash_method1-1.scala
class A { def m() {}; def m() {} }
object Main { def main(args: Array[String]) { } }
